--- a/calendar_more.html
+++ b/calendar_more.html
@@ -81,7 +81,7 @@
                             <div class="listline"></div>
                             <div class="listitem">
                                 <ul>
-                                    <a href="#">
+                                    <a href="sitemap.html">
                                     <li><img src="images/icon07.svg"></li>
                                     <li>全站導覽</li>
                                     </a>
