--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             <div class="listline"></div>
                             <div class="listitem">
                                 <ul>
-                                    <a href="#">
+                                    <a href="sitemap.html">
                                     <li><img src="images/icon07.svg"></li>
                                     <li>全站導覽</li>
                                     </a>
@@ -108,11 +108,11 @@
         <div class="index_sidelabel">
             <div class="side_fastbtn">
                 <a href="#"><div class="fast_icon"><img src="images/ke_04.svg"></div></a>
-                <div class="fast_font"><a href="#">南港1館</a></div>
+                <div class="fast_font"><a href="hall2.html">南港1館</a></div>
                 <a href="#"><div class="fast_icon"><i class="mdi mdi-calendar"></i></div></a>
                 <div class="fast_font"><a href="calendar.html">展會活動</a></div>
                 <a href="#"><div class="fast_icon"><i class="mdi mdi-email"></i></div></a>
-                <div class="fast_font"><a href="#">聯絡我們</a></div>
+                <div class="fast_font"><a href="aboutus9.html">聯絡我們</a></div>
             </div>
         </div>
 
