--- a/organizers_item7.html
+++ b/organizers_item7.html
@@ -82,7 +82,7 @@
                             <div class="listline"></div>
                             <div class="listitem">
                                 <ul>
-                                    <a href="#">
+                                    <a href="sitemap.html">
                                     <li><img src="images/icon07.svg"></li>
                                     <li>全站導覽</li>
                                     </a>
@@ -117,7 +117,7 @@
 
             </div>
             <div class="m-page_wrapper">
-                <div class="breadcrumb_title">展覽申請</div>
+                <div class="breadcrumb_title">活動申請</div>
                 <div class="twtbreadcrumb">
                     <ul>
                         <li><a href="index.html">首頁</a></li>
@@ -138,11 +138,11 @@
                         <a href="organizers_item4.html"><li>內部實景</li></a>
                         <a href="organizers_booking_calendar.html"><li>空檔查詢</li></a>
                         <a href="organizers_item6.html"><li>展覽申請</li></a>
-                        <a href="organizers_item7.html"><li>活動申請</li></a>
+                        <a href="organizers_item7.html"><li class="active">活動申請</li></a>
                         <!-- <a href="#"><li>尾牙方案</li></a> -->
                         <a href="hall2.html"><li>南港一館</li></a>
                         <a href="organizers_item5.html"><li>交通及停車場</li></a>
-                        
+
                     </ul>
                 </div>
 
