--- a/organizers_booking_calendar.html
+++ b/organizers_booking_calendar.html
@@ -82,7 +82,7 @@
                             <div class="listline"></div>
                             <div class="listitem">
                                 <ul>
-                                    <a href="#">
+                                    <a href="sitemap.html">
                                     <li><img src="images/icon07.svg"></li>
                                     <li>全站導覽</li>
                                     </a>
@@ -141,7 +141,7 @@
                         <!-- <a href="#"><li>尾牙方案</li></a> -->
                         <a href="hall2.html"><li>南港一館</li></a>
                         <a href="organizers_item5.html"><li>交通及停車場</li></a>
-                    
+
                     </ul>
                 </div>
                 <div class="booking-calender">
