--- a/sitemap.html
+++ b/sitemap.html
@@ -151,7 +151,7 @@
                     <div class="site_box">
                         <div class="site_title">租借場地</div>
                         <ul>
-                            <li><a href="#"><i class="mdi  mdi-chevron-down"></i>展覽會場</a></li>
+                            <li><a href="organizers_item1.html"><i class="mdi  mdi-chevron-down"></i>展覽會場</a></li>
                             <li class="site_smfont"><a href="organizers_item1.html"><i class="mdi mdi-chevron-right"></i>基本資訊 </a></li>
                             <li class="site_smfont"><a href="organizers_item2.html"><i class="mdi mdi-chevron-right"></i>一樓展場</a></li>
                             <li class="site_smfont"><a href="organizers_item3.html"><i class="mdi mdi-chevron-right"></i>四樓展場</a></li>
@@ -163,7 +163,7 @@
                             <li class="site_smfont"><a href="organizers_item5.html"><i class="mdi mdi-chevron-right"></i>交通及停車場</a></li>
                         </ul>
                         <ul>
-                            <li><a href="#"><i class="mdi  mdi-chevron-down"></i>會議室</a></li>
+                            <li><a href="conference-room.html"><i class="mdi  mdi-chevron-down"></i>會議室</a></li>
                             <li class="site_smfont"><a href="conference-room.html"><i class="mdi mdi-chevron-right"></i>會議室介紹</a></li>
                             <li class="site_smfont"><a href="conference-room_item2.html"><i class="mdi mdi-chevron-right"></i>會議活動剪影</a></li>
                             <li class="site_smfont"><a href="conference-room_item3.html"><i class="mdi mdi-chevron-right"></i>會議室空檔查詢</a></li>
@@ -173,13 +173,13 @@
                             <li class="site_smfont"><a href="conference-room_item7.html"><i class="mdi mdi-chevron-right"></i>其他服務</a></li>
                         </ul>
                         <ul>
-                            <li><a href="#"><i class="mdi  mdi-chevron-down"></i>公共空間</a></li>
+                            <li><a href="public_space.html"><i class="mdi  mdi-chevron-down"></i>公共空間</a></li>
                             <li class="site_smfont"><a href="public_space.html"><i class="mdi mdi-chevron-right"></i>洽詢公共空間</a></li>
                             <li class="site_smfont"><a href="public_space2.html"><i class="mdi mdi-chevron-right"></i>收費基準</a></li>
                             <li class="site_smfont"><a href="public_space3.html"><i class="mdi mdi-chevron-right"></i>公共空間一覽</a></li>
                         </ul>
                         <ul>
-                            <li><a href="#"><i class="mdi  mdi-chevron-down"></i>廣告刊登</a></li>
+                            <li><a href="advertisements_ad.html"><i class="mdi  mdi-chevron-down"></i>廣告刊登</a></li>
                             <li class="site_smfont"><a href="advertisements_ad.html"><i class="mdi mdi-chevron-right"></i>廣告點位</a></li>
                         </ul>
                         <ul>
