event step motifly

--- a/calendar.html
+++ b/calendar.html
@@ -139,80 +139,80 @@
                         <div class="calen-card-box">
                             <div class="calen-card_vrte">
                                 <div class="calen-card_head">
-                                    <div class="calen-pic"><img src="images/event.jpg"></div>
+                                    <div class="calen-pic"><a href="calendar_more.html"><img src="images/event.jpg"></a></div>
                                     <div class="calen-card_tab news_blue">展覽</div>
                                 </div>
                             </div>
                             <div class="calen-card_issuse">
                                 <div class="calen-card_date">7/5-7/9</div>
                                 <div class="calen-title">2018台北寵物用品展</div>
-                                <div class="calen-font">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="#">繼續閱讀</a></div>
+                                <div class="calen-font">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="calendar_more.html">繼續閱讀</a></div>
 
                             </div>
                         </div>
                         <div class="calen-card-box">
                             <div class="calen-card_vrte">
                                 <div class="calen-card_head">
-                                    <div class="calen-pic"><img src="images/event.jpg"></div>
+                                    <div class="calen-pic"><a href="calendar_more.html"><img src="images/event.jpg"></a></div>
                                     <div class="calen-card_tab news_blue">展覽</div>
                                 </div>
                             </div>
                             <div class="calen-card_issuse">
                                 <div class="calen-card_date">7/5-7/9</div>
                                 <div class="calen-title">2018台北寵物用品展</div>
-                                <div class="calen-font">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="#">繼續閱讀</a></div>
+                                <div class="calen-font">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="calendar_more.html">繼續閱讀</a></div>
                             </div>
                         </div>
                         <div class="calen-card-box">
                             <div class="calen-card_vrte">
                                 <div class="calen-card_head">
-                                    <div class="calen-pic"><img src="images/event.jpg"></div>
+                                    <div class="calen-pic"><a href="calendar_more.html"><img src="images/event.jpg"></a></div>
                                     <div class="calen-card_tab news_yellow">會議及活動</div>
                                 </div>
                             </div>
                             <div class="calen-card_issuse">
                                 <div class="calen-card_date">7/5-7/9</div>
                                 <div class="calen-title">2018台北寵物用品展</div>
-                                <div class="calen-font">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="#">繼續閱讀</a></div>
+                                <div class="calen-font">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="calendar_more.html">繼續閱讀</a></div>
                             </div>
                         </div>
                         <div class="calen-card-box">
                             <div class="calen-card_vrte">
                                 <div class="calen-card_head">
-                                    <div class="calen-pic"><img src="images/event.jpg"></div>
+                                    <div class="calen-pic"><a href="calendar_more.html"><img src="images/event.jpg"></a></div>
                                     <div class="calen-card_tab news_yellow">會議及活動</div>
                                 </div>
                             </div>
                             <div class="calen-card_issuse">
                                 <div class="calen-card_date">7/5-7/9</div>
                                 <div class="calen-title">2018台北寵物用品展</div>
-                                <div class="calen-font">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="#">繼續閱讀</a></div>
+                                <div class="calen-font">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="calendar_more.html">繼續閱讀</a></div>
                             </div>
                         </div>
                         <div class="calen-card-box">
                             <div class="calen-card_vrte">
                                 <div class="calen-card_head">
-                                    <div class="calen-pic"><img src="images/event.jpg"></div>
+                                    <div class="calen-pic"><a href="calendar_more.html"><img src="images/event.jpg"></a></div>
                                     <div class="calen-card_tab news_blue">展覽</div>
                                 </div>
                             </div>
                             <div class="calen-card_issuse">
                                 <div class="calen-card_date">7/5-7/9</div>
                                 <div class="calen-title">2018台北寵物用品展</div>
-                                <div class="calen-font">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="#">繼續閱讀</a></div>
+                                <div class="calen-font">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="calendar_more.html">繼續閱讀</a></div>
                             </div>
                         </div>
                         <div class="calen-card-box">
                             <div class="calen-card_vrte">
                                 <div class="calen-card_head">
-                                    <div class="calen-pic"><img src="images/event.jpg"></div>
+                                    <div class="calen-pic"><a href="calendar_more.html"><img src="images/event.jpg"></a></div>
                                     <div class="calen-card_tab news_blue">展覽</div>
                                 </div>
                             </div>
                             <div class="calen-card_issuse">
                                 <div class="calen-card_date">7/5-7/9</div>
                                 <div class="calen-title">2018台北寵物用品展</div>
-                                <div class="calen-font">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="#">繼續閱讀</a></div>
+                                <div class="calen-font">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="calendar_more.html">繼續閱讀</a></div>
                             </div>
                         </div>
 
