--- a/calendar_more.html
+++ b/calendar_more.html
@@ -164,7 +164,7 @@
                     <div class="mod-organizer_title">贊助單位：</div>
                     <div class="news_article">車主雜誌、美國職籃、美國職棒、磐石保險經紀人、文森保羅</div>
                     <div class="mod-organizer_title">售票連結：</div>
-                    <div class="news_article">https://iticket.gmusic.com.tw/application/UTK02/UTK0201_.aspx?PRODUCT_ID=N00FRLC1</div>
+                    <div class="news_article"><a href="https://iticket.gmusic.com.tw/application/UTK02/UTK0201_.aspx?PRODUCT_ID=N00FRLC1">https://iticket.gmusic.com.tw/application/UTK02/UTK0201_.aspx?PRODUCT_ID=N00FRLC1</a></div>
                 </div>
             </div>
         </article>
