--- a/event_item1.html
+++ b/event_item1.html
@@ -144,31 +144,29 @@
                 <div class="news_continer">
                     <div class="mod-organizer_title ">申請流程:</div>
                     <div class="step">
-                        <div class="step_bg stepblue_deep">
-                            <div class="step_title">「活動借用流程」、「收費基準」請詳閱。</div>
-                            <ul>
-                                <li><a href="#">活動借用流程下載</a></li>
-                                <li><a href="#">收費基準下載</a></li>
-                            </ul>
-                        </div>
-                        <div class="step_bg"><img src="images/next.svg"></div>
                         <div class="step_bg stepblue">
-                            <div class="step_title">「活動預約申請表」：請依主辦單位不同分別下戴，填寫後回傳。</div>
-                            <ul>
-                                <li><a href="#">活動預約申請表－單一主辦單位 下載</a></li>
-                                <li><a href="#">活動預約申請表－含協辦單位 下載</a></li>
-                            </ul>
+                            <div class="step_one"><img src="images/step.svg"></div>
+                            <div class="step_title">
+                                「<a href="#">活動借用流程</a>」、「<a href="#">收費基準</a>」請詳閱。
+                            </div>
                         </div>
-                        <div class="step_bg"><img src="images/next.svg"></div>
                         <div class="step_bg stepblue">
-                            <div class="step_title">「借用合約」簽訂。</div>
-                            <ul>
-                                <li><a href="#">借用合約 下載</a></li>
-                            </ul>
+                            <div class="step_one"><img src="images/step2.svg"></div>
+                            <div class="step_title">「<a href="#">活動預約申請表</a>」：請依主辦單位不同分別下戴，填寫後回傳。</br>
+                            <a href="#">活動預約申請表－單一主辦單位</a> </br>
+                            <a href="#">活動預約申請表－含協辦單位</a> </br>
+                            </div>
+                        </div>
+                        <div class="step_bg stepblue">
+                            <div class="step_one"><img src="images/step3.svg"></div>
+                            <div class="step_title">「<a href="#">借用合約</a>」簽訂。
+                            </div>
                         </div>
 
+
+
                     </div>
-                    <div class="mod-organizer_title ">更多資訊請洽:886-2-2725-5200 分機: 5525</div>
+                    <div class="mod-organizer_title ">更多資訊請洽:886-2-2725-5200 分機: 5526</div>
 
                 </div>
 
