--- a/index.html
+++ b/index.html
@@ -101,10 +101,70 @@
                     </nav>
                 <div class="shod"></div>
                 </div>
-
-
             </div>
+            <!-- <div class="downmenu_bg">
+                <div class="downmenu_box">
+                    <div class="do_wrip">
+                        <div class="downmenu_li">
+                            <div class="do_icon"><img src="images/downtw.svg"></div>
+                            <div class="do_title"><i class="mdi mdi-minus"></i>展覽會場</div>
+                            <div class="do_font">
+                                <ul>
+                                    <li><a href="organizers_item1.html"><i class="mdi mdi-chevron-right"></i>基本資訊 </a></li>
+                                    <li><a href="organizers_item2.html"><i class="mdi mdi-chevron-right"></i>一樓展場</a></li>
+                                    <li><a href="organizers_item3.html"><i class="mdi mdi-chevron-right"></i>四樓展場</a></li>
+                                    <li><a href="organizers_item4.html"><i class="mdi mdi-chevron-right"></i>內部實景</a></li>
+                                    <li><a href="organizers_booking_calendar.html"><i class="mdi mdi-chevron-right"></i>空檔查詢</a></li>
+                                    <li><a href="organizers_item6.html"><i class="mdi mdi-chevron-right"></i>展覽申請</a></li>
+                                    <li><a href="organizers_item7.html"><i class="mdi mdi-chevron-right"></i>活動申請</a></li>
+                                    <li><a href="hall2.html"><i class="mdi mdi-chevron-right"></i>南港1館</a></li>
+                                    <li><a href="organizers_item5.html"><i class="mdi mdi-chevron-right"></i>交通及停車場</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="downmenu_li">
+                            <div class="do_icon"><img src="images/met01.svg"></div>
+                            <div class="do_title"><i class="mdi mdi-minus"></i>會議室</div>
+                            <div class="do_font">
+                                <ul>
+                                    <li><a href="conference-room.html"><i class="mdi mdi-chevron-right"></i>會議室介紹</a></li>
+                                    <li><a href="conference-room_item2.html"><i class="mdi mdi-chevron-right"></i>會議活動剪影</a></li>
+                                    <li><a href="conference-room_item3.html"><i class="mdi mdi-chevron-right"></i>會議室空檔查詢</a></li>
+                                    <li><a href="conference-room_item4.html"><i class="mdi mdi-chevron-right"></i>會議室申請流程</a></li>
+                                    <li><a href="conference-room_item5.html"><i class="mdi mdi-chevron-right"></i>場租試算</a></li>
+                                    <li><a href="conference-room_item6.html"><i class="mdi mdi-chevron-right"></i>貴賓室</a></li>
+                                    <li><a href="conference-room_item7.html"><i class="mdi mdi-chevron-right"></i>其他服務</a></li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <div class="downmenu_li">
+                            <div class="do_icon"><img src="images/ke_04.svg"></div>
+                            <div class="do_title"><i class="mdi mdi-minus"></i>公共空間</div>
+                            <div class="do_font">
+                                <ul>
+                                    <li><a href="public_space.html"><i class="mdi mdi-chevron-right"></i>洽詢公共空間</a></li>
+                                    <li><a href="public_space2.html"><i class="mdi mdi-chevron-right"></i>收費基準</a></li>
+                                    <li><a href="public_space3.html"><i class="mdi mdi-chevron-right"></i>公共空間一覽</a></li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <div class="downmenu_li">
+                            <div class="do_icon"><img src="images/twdad.svg"></div>
+                            <div class="do_title"><i class="mdi mdi-minus"></i>廣告刊登</div>
+                            <div class="do_font">
+                                <ul>
+                                    <li><a href="advertisements_ad.html"><i class="mdi mdi-chevron-right"></i>廣告點位</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div> -->
+
         </header>
+
         <div class="index_sidelabel">
             <div class="side_fastbtn">
                 <a href="#"><div class="fast_icon"><img src="images/ke_04.svg"></div></a>
