--- a/visitors7.html
+++ b/visitors7.html
@@ -142,7 +142,7 @@
                 </div>
                 <div class="mod-organizer_title">請參考台北南港展覽館2館鄰近銀行、郵局及國際快遞代收點位圖，有需者請自行接洽前往。</div>
 
-                <div class="widget-pic"><img src="images/57b12098e37c0.jpg"></div>
+                <div class="widget-pic"><img src="images/map.jpg"></div>
 
 
             </div>
