--- a/visitors6.html
+++ b/visitors6.html
@@ -141,7 +141,7 @@
                     </ul>
                 </div>
                 <div class="mod-organizer_title">南港展覽館1館臨近捷運南港展覽館站，交通方便臨近各大高品質飯店。</div>
-                <div class="googlemap_hotel"><img src="images/2018-08-17_142638.jpg"></div>
+                <iframe allowfullscreen="" frameborder="0" height="450" src="https://www.google.com/maps/embed?pb=!1m12!1m8!1m3!1d14457.448688882338!2d121.608599!3d25.055711!3m2!1i1024!2i768!4f13.1!2m1!1z6aOv5bqX!5e0!3m2!1szh-TW!2stw!4v1456025408804" style="border:0" width="100%"></iframe>
 
 
 
