--- a/visitors2.html
+++ b/visitors2.html
@@ -151,7 +151,7 @@
                 <div class="mod-organizer_title">圖為台北南港展覽館2館一樓平面圖，顯示下列區域和展館的相對位置：</div>
 
 
-                <div class="widget-pic"><img src="images/sdffg.jpg"></div>
+                <div class="widget-pic"><img src="images/16.jpg"></div>
 
 
             </div>
