--- a/sitemap.html
+++ b/sitemap.html
@@ -192,46 +192,46 @@
                     <div class="site_box">
                         <div class="site_title">展會活動</div>
                         <ul>
-                            <li><a href="#">展覽</a></li>
-                            <li><a href="#">會議及活動</a></li>
+                            <li><a href="calendar.html">展覽</a></li>
+                            <li><a href="calendar.html">會議及活動</a></li>
                         </ul>
                     </div>
                     <div class="site_box">
                         <div class="site_title">參觀資訊</div>
                         <ul>
-                            <li><a href="#">交通資訊</a></li>
-                            <li><a href="#">平面位置</a></li>
-                            <li><a href="#">公共設施</a></li>
-                            <li><a href="#">餐飲服務</a></li>
-                            <li><a href="#">展覽申請</a></li>
-                            <li><a href="#">住宿資訊</a></li>
-                            <li><a href="#">外幣兌換與快遞服務</a></li>
+                            <li><a href="transportation1.html">交通資訊</a></li>
+                            <li><a href="visitors2.html">平面位置</a></li>
+                            <li><a href="visitors3.html">公共設施</a></li>
+                            <li><a href="food.html">餐飲服務</a></li>
+                            <li><a href="organizers_item6.html">展覽申請</a></li>
+                            <li><a href="visitors6.html">住宿資訊</a></li>
+                            <li><a href="visitors7.html">外幣兌換與快遞服務</a></li>
                         </ul>
                     </div>
                     <div class="site_box">
                         <div class="site_title">交通資訊</div>
                         <ul>
-                            <li><a href="#">停車場</a></li>
-                            <li><a href="#">自行開車</a></li>
-                            <li><a href="#">捷運路線</a></li>
-                            <li><a href="#">公車路線</a></li>
-                            <li><a href="#">高鐵路線</a></li>
-                            <li><a href="#">Ubike</a></li>
-                            <li><a href="#">國道客運</a></li>
-                            <li><a href="#">尋車導引系統</a></li>
+                            <li><a href="transportation1.html">停車場</a></li>
+                            <li><a href="transportation2.html">自行開車</a></li>
+                            <li><a href="transportation3.html">捷運路線</a></li>
+                            <li><a href="transportation4.html">公車路線</a></li>
+                            <li><a href="transportation5.html">高鐵路線</a></li>
+                            <li><a href="transportation6.html">Ubike</a></li>
+                            <li><a href="transportation7.html">國道客運</a></li>
+                            <li><a href="transportation8.html">尋車導引系統</a></li>
                         </ul>
                     </div>
                     <div class="site_box">
                         <div class="site_title">常見問題</div>
                         <ul>
-                            <li><a href="#">常見問題</a></li>
+                            <li><a href="faq1.html">常見問題</a></li>
 
                         </ul>
                     </div>
                     <div class="site_box">
                         <div class="site_title">相關連結</div>
                         <ul>
-                            <li><a href="#">相關連結</a></li>
+                            <li><a href="links.html">相關連結</a></li>
 
                         </ul>
                     </div>
