--- a/transportation1.html
+++ b/transportation1.html
@@ -126,6 +126,10 @@
                     </ul>
                 </div>
             </div>
+
+
+
+
             <div class="orang_wrapper">
                 <div class="orang_tab">
                     <ul>
@@ -140,9 +144,8 @@
                     </ul>
                 </div>
 
-            </div>
-            <div class="widget-pic"><img src="images/lobe.jpg"></div>
-            <div class="orang_wrapper">
+                <div class="widget-pic"><img src="images/map2.jpg"></div>
+                <div class="line_gray"></div>
                 <div class="mod-organizer_title">台北南港展覽館1館 地下停車場動線及服務資訊：</div>
                 <div class="trans_box">
                     <div class="tran_list"><img src="images/bus6.svg"></div>
