motifly hide visitors btn

--- a/advertisements_ad.html
+++ b/advertisements_ad.html
@@ -139,7 +139,7 @@
 
                 <div class="news_continer">
                     <div class="widget-pic"><img src="images/led.jpg"></div>
-                    <div class="mod-organizer_title">台北南港展覽館1館臨時廣告物申請流程：</div>
+                    <div class="mod-organizer_title">台北南港展覽館臨時廣告物申請流程：</div>
                     <div class="news_article">
                     <div class="faq_num_listbox">
                         <ol>
