--- a/organizers_item6.html
+++ b/organizers_item6.html
@@ -143,20 +143,7 @@
                         <a href="organizers_item5.html"><li>交通及停車場</li></a>
                     </ul>
                 </div>
-                <div class="telecom">
-                    <div class="com"><img src="images/telecom.jpg"></div>
-                    <div class="com">
-                        <div class="com_title">中華電信股份有限公司(南港服務中心)</div>
-                        <div class="com_font">服務電話： 886-2-2720-0149</br>
-                        駐地施工班： 886-2-2655-9456 (展覽期間)</div>
-                    </div>
-                    <div class="com"><img src="images/telecom2.jpg"></div>
-                    <div class="com">
-                        <div class="com_title">新竹物流</div>
-                        <div class="com_font">服務時間：展覽期間</br>
-                        服務項目：貨運配送、宅配到府、物流倉儲</div>
-                    </div>
-                </div>
+
 
 
                 <div class="news_continer">
@@ -213,6 +200,21 @@
                         <a href="#">
                             <div class="down_boxright">下載</div>
                         </a>
+                    </div>
+                    <div class="mod-organizer_title margin-top">其他服務:</div>
+                    <div class="telecom ">
+                        <div class="com"><img src="images/telecom.jpg"></div>
+                        <div class="com">
+                            <div class="com_title">中華電信股份有限公司(南港服務中心)</div>
+                            <div class="com_font">服務電話： 886-2-2720-0149</br>
+                            駐地施工班： 886-2-2655-9456 (展覽期間)</div>
+                        </div>
+                        <div class="com"><img src="images/telecom2.jpg"></div>
+                        <div class="com">
+                            <div class="com_title">新竹物流</div>
+                            <div class="com_font">服務時間：展覽期間</br>
+                            服務項目：貨運配送、宅配到府、物流倉儲</div>
+                        </div>
                     </div>
 
                 </div>
