--- a/sitemap.html
+++ b/sitemap.html
@@ -203,7 +203,7 @@
                             <li><a href="visitors2.html">平面位置</a></li>
                             <li><a href="visitors3.html">公共設施</a></li>
                             <li><a href="food.html">餐飲服務</a></li>
-                            <li><a href="organizers_item6.html">展覽申請</a></li>
+                            <!-- <li><a href="organizers_item6.html">展覽申請</a></li> -->
                             <li><a href="visitors6.html">住宿資訊</a></li>
                             <li><a href="visitors7.html">外幣兌換與快遞服務</a></li>
                         </ul>
