--- a/visitors7.html
+++ b/visitors7.html
@@ -134,7 +134,7 @@
                         <a href="visitors3.html"><li>公共設施</li></a>
                         <!-- <a href="visitors4.html"><li>Free Wi-Fi</li></a> -->
                         <a href="food.html"><li>餐飲服務</li></a>
-                        <a href="organizers_item6.html"><li>展覽申請</li></a>
+                        <!-- <a href="organizers_item6.html"><li>展覽申請</li></a> -->
                         <a href="visitors6.html"><li>住宿資訊</li></a>
                         <a href="visitors7.html"><li class="active">外幣兌換與快遞服務</li></a>
                         <!-- <a href="visitors8.html"><li>免費行動數位閱讀</li></a> -->
