--- a/aboutus7.html
+++ b/aboutus7.html
@@ -141,7 +141,7 @@
                 </div>
 
                 <div class="news_continer">
-                <div class="mod-organizer_title">關於中華民國對外貿易發展協會</div>
+                <!-- <div class="mod-organizer_title">關於中華民國對外貿易發展協會</div> -->
                 <div class="safety_article">
                     中華民國對外貿易發展協會（簡稱外貿協會或貿協）係由中華民國政府於民國59年7月1日結合民間 工商團體，所組成之非營利性財團法人，成立宗旨係協助業界發展我國之對外貿易。
 
