delete font one hall

--- a/aboutus6.html
+++ b/aboutus6.html
@@ -149,7 +149,7 @@
                             <div class="down_boxright">下載</div>
                         </a>
                     </div>
-                    <div class="safety_article margin-top">外貿協會台北南港展覽館1館(以下稱該館)致力於環保節能，除取得綠建築標章、執行碳盤查、力行各項綠色措施之外，自2014年5月起與國際潮流接軌，導入ISO 20121活動永續性管理系統(Event Sustainability Management Systems)，將「社會面」、「經濟面」及「環境面」各項永續作法，均列為管理營運的一環!
+                    <div class="safety_article margin-top">外貿協會台北南港展覽館(以下稱該館)致力於環保節能，除取得綠建築標章、執行碳盤查、力行各項綠色措施之外，自2014年5月起與國際潮流接軌，導入ISO 20121活動永續性管理系統(Event Sustainability Management Systems)，將「社會面」、「經濟面」及「環境面」各項永續作法，均列為管理營運的一環!
                     </br>
                     社會面：關注弱勢、強化安全。</br>
                     經濟面：提升服務、永續營運。</br>
@@ -158,13 +158,13 @@
 
                     <div class="mod-organizer_title">需要檔案下載:</div>
                     <div class="download_word">
-                        <div class="wod_box word_color"><i class="mdi mdi-file-pdf"></i><a href="#"> 外貿協會台北南港展覽館1館活動永續發展聲明、原則及政策</a></div>
+                        <div class="wod_box word_color"><i class="mdi mdi-file-pdf"></i><a href="#"> 外貿協會台北南港展覽館活動永續發展聲明、原則及政策</a></div>
                         <a href="#">
                             <div class="down_boxright">下載</div>
                         </a>
                     </div>
                     <div class="download_word">
-                        <div class="wod_box word_color"><i class="mdi mdi-file-pdf"></i><a href="#">外貿協會台北南港展覽館1館活動永續發展聲明、原則（英）</a></div>
+                        <div class="wod_box word_color"><i class="mdi mdi-file-pdf"></i><a href="#">外貿協會台北南港展覽館活動永續發展聲明、原則（英）</a></div>
                         <a href="#">
                             <div class="down_boxright">下載</div>
                         </a>
