--- a/aboutus7.html
+++ b/aboutus7.html
@@ -142,6 +142,27 @@
 
                 <div class="news_continer">
                 <!-- <div class="mod-organizer_title">關於中華民國對外貿易發展協會</div> -->
+                <div class="public-art">
+                    <div class="art"><img src="images/201709170304031252.jpg"></div>
+                    <div class="art">
+                        <div class="mod-organizer_title">10大核心服務：</div>
+                        <div class="transport_point">
+                            <ul>
+                                <li>拓銷全球市場 </li>
+                                <li>推廣服務業貿易</li>
+                                <li>培訓國際企業人才</li>
+                                <li>推動國際經貿聯繫</li>
+                                <li>提升臺灣產業形象</li>
+                                <li>提供市場研析及商情</li>
+                                <li>加強數位及電商行銷</li>
+                                <li>運用大數據發掘商機</li>
+                                <li>辦理台灣國際專業展</li>
+                                <li>營運展覽館及會議中心</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="line_gray"></div>
                 <div class="safety_article">
                     中華民國對外貿易發展協會（簡稱外貿協會或貿協）係由中華民國政府於民國59年7月1日結合民間 工商團體，所組成之非營利性財團法人，成立宗旨係協助業界發展我國之對外貿易。
 
@@ -151,28 +172,9 @@
 為強化跨領域整合創新，本會重新定位為國際鏈結智慧整合中心(smart integrator)，結合法人、大學、觀光、展會、城市、公協會、海外台商，為業者開發國際市場、進行國際合作、連接國際網絡，提供整合性服務。
 
                 </div>
-                    <div class="line_gray"></div>
 
-                    <div class="public-art">
-                        <div class="art"><img src="images/56c95b7809839.jpg"></div>
-                        <div class="art">
-                            <div class="mod-organizer_title">10大核心服務：</div>
-                            <div class="transport_point">
-                                <ul>
-                                    <li>拓銷全球市場 </li>
-                                    <li>推廣服務業貿易</li>
-                                    <li>培訓國際企業人才</li>
-                                    <li>推動國際經貿聯繫</li>
-                                    <li>提升臺灣產業形象</li>
-                                    <li>提供市場研析及商情</li>
-                                    <li>加強數位及電商行銷</li>
-                                    <li>運用大數據發掘商機</li>
-                                    <li>辦理台灣國際專業展</li>
-                                    <li>營運展覽館及會議中心</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
+
+
 
 
 
